examples/test/testpolicy7884.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7884
  namespace: namespace16
spec:
  podSelector:
    matchLabels:
      key32: value29
      key49: value42
      key40: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value19
          key2: value39
          key12: value48
      podSelector:
        matchLabels:
          key1: value40
          key42: value11
          key13: value19
